# leetcode_cli

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  cli.py  komendy.txt  o.txt  pyproject.toml  requirements.txt  test.py  todo.txt  user_utils.py
.github/workflows/: build.yml  lint.yml
data_fetching/: code_snippet_fetcher.py  fetch_code_snippet.py  graphql_queries.py  leetcode_problem_fetcher.py  leetcode_stats.py  problem_fetcher.py  problemset_fetcher.py  stats_fetcher.py
data_fetching/api_data_fetchers/: leetcode_problems.py
data_fetching/graphql_data_fetchers/: fetch_code_snippet.py  graphql_queries.py  leetcode_problem_fetcher.py  leetcode_problems_by_tags.py  leetcode_stats.py
graphics/: colors.py  escape_sequences.py  symbols.py
leetcode_problem/: create_solution_file.py  problem_submitter.py  submit_problem.py
parsers/: leetcode_problem_parser.py  leetcode_problemset_parser.py  leetcode_stats_parser.py  problem_parser.py  problemset_parser.py  submission_parser.py
parsers/parser_utils/: __init__.py  leetcode_stats_parser.py
src/leetcode_cli/: 1.two-sum.py  a.txt  cli.py  deprecli.py  feedback.txt  init_app_files.py  user_utils.py
src/leetcode_cli/code/: code_service.py
src/leetcode_cli/commands/: config.py  create_solution.py  download_problems.py  list_problem.py  list_problems.py  show_problem.py  show_random.py  stats.py  submit.py  test_solution.py  theme.py
src/leetcode_cli/constants/: default_config.py  default_formatting_config.py  default_theme_constants.py  formatting_config_constants.py  problem_constants.py  stats_constants.py
src/leetcode_cli/core/: config_service.py  formatting_service.py  init_app.py  theme_service.py
(+110 files in other folders)
