[project]
name = "leetcode_cli"
version = "0.1.0"
description = "A CLI for interacting with LeetCode."
authors = [
    { name = "Michal Pielka" }
]

license = { file = "LICENCE" }

readme = "README.md"
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.1",
    "PyYAML>=5.4",
    "beautifulsoup4>=4.9.3"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
leetcode = "leetcode_cli.cli:main"
