[project]
name = "leetcode_cli"
version = "0.1.0"
description = "A CLI for interacting with LeetCode."
authors = [
    { name = "Michal Pielka" }
]

license = { file = "LICENCE" }

readme = "README.md"

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
leetcode = "leetcode_cli.cli:main"
